pkg/front_end/testcases/inference/infer_type_on_var2.dart.type_promotion.expect
pkg/front_end/testcases/inference/infer_type_on_var2.dart:10:5: Context: Write to x@295
  x = /*error:INVALID_ASSIGNMENT*/ "hi";
    ^
